[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/gui/MainStartScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gui/StartScreenContainer.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/OptionsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/SpeechFrame_ninepatch.png" type="Texture" id=4]
[ext_resource path="res://scenes/gui/CreditsScreen.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "ShowCredits"
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 1024, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainStartScreen:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("MainStartScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( -1024, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CreditsScreen:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 1024, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("MainStartScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 1024, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CreditsScreen:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 1024, 0 ) ]
}

[node name="StartScreenContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainStartScreen" parent="." instance=ExtResource( 1 )]

[node name="BackButton" parent="MainStartScreen/NinePatchRect" index="0"]
visible = false

[node name="OptionsScreen" parent="." instance=ExtResource( 3 )]
margin_left = 1024.0
margin_right = 1024.0

[node name="BackButton" parent="OptionsScreen/NinePatchRect" index="0" groups=[
"StartScreenButton",
]]

[node name="CreditsScreen" parent="." instance=ExtResource( 5 )]
margin_left = 1024.0
margin_right = 1024.0

[node name="BackButton" parent="CreditsScreen/NinePatchRect" index="0" groups=[
"StartScreenButton",
]]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ShowMainOptions"
playback_speed = 2.0
anims/ShowCredits = SubResource( 1 )
anims/ShowGameOptions = SubResource( 2 )
anims/ShowMainOptions = SubResource( 3 )
[connection signal="pressed" from="MainStartScreen/NinePatchRect/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainStartScreen/NinePatchRect/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="OptionsScreen/NinePatchRect/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="OptionsScreen/NinePatchRect/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CreditsScreen/NinePatchRect/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="MainStartScreen"]

[editable path="OptionsScreen"]

[editable path="CreditsScreen"]
